mType/tests/testFiles/lombok/error/data_on_function_error.mt
// @Data targets CLASS only — applying it to a top-level function is a @Target
// violation.
@Data
public function compute(): int {
    return 1;
}

print(compute());
